fix isExcessCalPerDay.